--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"postinstall": "husky install",
+		"format": "prettier --cache --write .",
+		"lint": "eslint --cache --max-warnings=0"
 	},
 	"eslintConfig": {
 		"extends": [
